# botfortrpp

./: .gitignore  Dockerfile  config.py  docker-compose.yml  index.html  main.py  requirements.txt
bot/: .env  pyproject.toml
bot/src/bot/: config.py  docker-compose.yml  init.sql  main.py
bot/src/bot/docs/: conf.py  index.rst  keyboards.rst  services.rst
bot/src/bot/docs/_build/doctrees/: environment.pickle  handlers.doctree  index.doctree  keyboards.doctree  messages.doctree  middlewares.doctree  modules.doctree  services.doctree
bot/src/bot/docs/_build/html/: .buildinfo  genindex.html  handlers.html  index.html  keyboards.html  messages.html  middlewares.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  services.html
bot/src/bot/docs/_build/html/_modules/: index.html  keyboards.html
bot/src/bot/docs/_build/html/_modules/handlers/: admin.html  entertaiment.html  qr_code.html  random_gen.html  tasks.html  users.html  weather.html
bot/src/bot/docs/_build/html/_modules/messages/: bot_messages.html
bot/src/bot/docs/_build/html/_sources/: handlers.rst.txt  messages.rst.txt  middlewares.rst.txt  modules.rst.txt
bot/src/bot/docs/_build/html/_static/: bizstyle.js
bot/src/bot/handlers/: admin.py  entertaiment.py  qr_code.py  random_gen.py  tasks.py  users.py  weather.py
bot/src/bot/keyboards/: keyboards.py
bot/src/bot/locales/en/LC_MESSAGES/: bot.po
bot/src/bot/locales/ru/LC_MESSAGES/: bot.po
bot/src/bot/middlewares/: ban_middleware.py  language_middleware.py  throttling_middleware.py
bot/src/bot/services/: db.py
(+19 files in other folders)
